modularize dnsmasq configuration

--- a/files/etc/dnsmasq.conf
+++ b/files/etc/dnsmasq.conf
@@ -1,9 +1,1 @@
-resolv-file=/etc/dnsmasq/upstream.conf
-
-local=/jmarcelocruz.lan/
-
-expand-hosts
-domain=jmarcelocruz.lan
-
-interface=virbr0
-dhcp-range=virbr0,172.16.1.2,172.16.1.254,12h
+conf-dir=/etc/dnsmasq.d/,*.conf
