account for different architectures (x86_64, arm64) when installing updated kernel

--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -9,7 +9,15 @@
   ansible.builtin.apt:
     update_cache: true
     upgrade: dist
-- name: Install updated kernel from stable-backports
+- name: Install updated kernel from stable-backports (x86_64)
   ansible.builtin.apt:
     package: linux-image-amd64
+    state: latest
     default_release: stable-backports
+  when: ansible_facts['architecture'] == 'x86_64'
+- name: Install updated kernel from stable-backports (arm64)
+  ansible.builtin.apt:
+    package: linux-image-arm64
+    state: latest
+    default_release: stable-backports
+  when: ansible_facts['architecture'] == 'aarch64'
