add gnome-games to the list of packages to remove

--- a/roles/workstation/tasks/main.yaml
+++ b/roles/workstation/tasks/main.yaml
@@ -47,6 +47,7 @@
   ansible.builtin.apt:
     package:
     - firefox-esr
+    - gnome-games
     purge: true
     state: absent
 - name: Autoremove left-over dependencies
